--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.couchbase.connection-string=couchbase://127.0.0.1
+spring.couchbase.username=mendes
+spring.couchbase.password=mendes
+spring.data.couchbase.bucket-name=user
